force-app/main/default/objects/custom_create337__c/custom_create337__c.object-meta.xml
<CustomObject>
    <label>Custom created object337</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects337</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>