force-app/main/default/objects/custom_create337__c/fields/custom_create_337field539__c.field-meta.xml
<CustomField>
    <fullName>custom_create_337field539__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 337field539</label>
    <type>Checkbox</type>
</CustomField>